# whisper-android-codex

./: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts  whisper-android-plan.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/app/whisper/: AppThemeViewModel.kt  MainActivity.kt  WhisperApp.kt
app/src/main/res/color/: ic_launcher_background.xml
app/src/main/res/color-night/: ic_launcher_background.xml
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/drawable-anydpi-v26/: ic_launcher_monochrome.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
core/: build.gradle.kts
core/src/main/java/com/app/whisper/core/: AudioConverter.kt  AudioDecodeUtils.kt  CoreConfig.kt  FormatUtils.kt  NetworkModule.kt
core/src/main/java/com/app/whisper/data/model/: WhisperModel.kt
feature-audio/: build.gradle.kts
feature-audio/src/main/java/com/app/whisper/audio/: AudioRecorder.kt
feature-settings/: build.gradle.kts
feature-settings/src/main/java/com/app/whisper/feature/settings/: PreferencesManager.kt
feature-transcription/: build.gradle.kts
feature-transcription/src/main/java/com/app/whisper/data/model/: ModelManager.kt  (+1 more)
feature-transcription/src/main/java/com/app/whisper/nativelib/: WhisperNative.kt
feature-transcription/src/main/java/com/app/whisper/work/: CancelDownloadReceiver.kt  ModelDownloadWorker.kt
native/: CMakeLists.txt  build.gradle.kts
native/jni/: audio_processor.cpp  audio_processor.h  whisper_jni.cpp
ui-components/: build.gradle.kts
(+6 files in other folders)
